toolbar spinner for kw

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.MenuActivity"/>
+        <activity android:name=".ui.MenuActivity" android:theme="@style/ToolbarAppTheme"/>
     </application>
 
 </manifest>
