--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,10 @@ dependencies {
     implementation 'com.google.dagger:dagger-android:2.15'
     implementation 'com.google.dagger:dagger-android-support:2.11'
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.16'
+
+    implementation 'com.flaviofaria:kenburnsview:1.0.7'
+
+    // ACRA
+    implementation 'ch.acra:acra-mail:5.1.3'
+    implementation 'ch.acra:acra-dialog:5.1.3'
 }
